--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -17,6 +17,7 @@
   </div>
   <div id="game-board">
   </div> -->
+  <div id='score'>0</div>
   <button id="start-button">StartGame</button>
   <canvas id="canvas"></canvas>
 
